--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.firebase/hosting.YnVpbGQ.cache
+.gitignore
+firebase.json
+firestore.rules
+.firebaserc
+firestore.indexes.json
+storage.rules
+.gitignore
