--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.29.3",
+    "emailjs-com": "^3.2.0",
     "firebase": "8.5",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
